--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FFD700</color>
+    <color name="colorPrimary">#6B8E23</color>
+    <color name="colorPrimaryDark">#556B2F</color>
+    <color name="colorAccent">#A52A2A</color>
 </resources>
