--- a/app/src/main/res/layout/activity_logowanie.xml
+++ b/app/src/main/res/layout/activity_logowanie.xml
@@ -41,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:backgroundTint="#9ACD32"
             android:onClick="zaloguj"
             android:text="@string/zaloguj" />
     </LinearLayout>
