--- a/app/src/main/res/layout/activity_panel_glowny.xml
+++ b/app/src/main/res/layout/activity_panel_glowny.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:backgroundTint="#9ACD32"
             android:onClick="stworzPlan"
             android:text="@string/stworz_plan" />
 
@@ -49,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:backgroundTint="#9ACD32"
             android:onClick="wpisDoBazy"
             android:text="@string/wpis_do_bazy" />
 
@@ -57,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
+            android:backgroundTint="#9ACD32"
             android:onClick="informacje"
             android:text="@string/informacje" />
 
@@ -66,12 +69,13 @@
         android:id="@+id/opis_przyciskow"
         android:layout_width="194dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="33dp"
         android:backgroundTint="@android:color/white"
         android:elevation="0dp"
+        android:onClick="toastOpis"
         android:text="@string/opis_przyciskow"
-        android:textAlignment="center"
-        android:layout_marginBottom="33dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:textAlignment="center" />
 
 </RelativeLayout>
