dodano logo do informacji o programie - usunieto zbedne loga

--- a/app/src/main/res/layout/activity_informacje.xml
+++ b/app/src/main/res/layout/activity_informacje.xml
@@ -26,6 +26,13 @@
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="start"
+                app:srcCompat="@drawable/logo" />
+
             <TextView
                 android:id="@+id/Planer_MRP_v0.99"
                 android:layout_width="match_parent"
