--- a/app/src/main/res/layout/activity_wpis_do_bazy.xml
+++ b/app/src/main/res/layout/activity_wpis_do_bazy.xml
@@ -123,6 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_weight="0"
+                    android:background="#9ACD32"
                     android:onClick="wyslijMaterial"
                     android:text="@string/dodaj_wpis" />
             </LinearLayout>
@@ -194,7 +195,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:backgroundTint="#9ACD32"
+                    android:background="#9ACD32"
                     android:onClick="wyslijPolprodukt"
                     android:text="@string/dodaj_wpis" />
             </LinearLayout>
@@ -267,7 +268,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
-                    android:backgroundTint="#9ACD32"
+                    android:background="#9ACD32"
                     android:onClick="wyslijProdukt"
                     android:text="@string/dodaj_wpis" />
             </LinearLayout>
